--- a/FrontEnd/src/components/BookHit.css
+++ b/FrontEnd/src/components/BookHit.css
@@ -1,6 +1,14 @@
 .BookHit {
-  display: block;
-  flex-direction: column;
-  flex-wrap: wrap;
-  border: 2px solid black;
+  display: flex;
+  /* flex-direction: row;
+  flex-wrap: wrap; */
+  /* border: 2px solid black; */
+  text-align: center;
+  height: 300px;
+  width: 300px;
+  margin-bottom: 50px;
+}
+
+.covers {
+  max-width: 40vw;
 }
