--- a/FrontEnd/src/components/BookDescriptions.css
+++ b/FrontEnd/src/components/BookDescriptions.css
@@ -1,11 +1,55 @@
-.descriptionParagraph {
+.descriptionTitle {
+  text-align: center;
+}
+
+.coverDiv {
+  float: left;
+  width: 50%;
+  justify-content: center;
+}
+
+img.coverImg {
+  margin-right: 50%;
+}
+
+.floatContainer {
   display: flex;
   flex-direction: column;
-  margin-left: 270px;
-  margin-right: 270px;
-  line-height: 1.5;
+  float: right;
+  width: 50%;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.descriptionParagraph {
+  float: right;
+  width: 400px;
+  margin-top: -20px;
+  flex-wrap: wrap;
 }
 
 .false {
   display: none;
+}
+
+/* button stuff from amazon */
+.amazonButton {
+  background-image: url("../images/256x256.png");
+  background-repeat: no-repeat;
+  background-color: black;
+  width: 300px;
+  height: 70px;
+  border: 1 solid black;
+  border-radius: 8px;
+  background-size: 100%; /* To fill the dimensions of container (button), or */
+  background-size: 40px auto;
+  margin-top: 20px;
+}
+
+.reviewButton {
+  margin-top: 20px;
+}
+
+.reviewFormDiv {
+  display: flex;
 }
