--- a/FrontEnd/src/components/BookList.css
+++ b/FrontEnd/src/components/BookList.css
@@ -16,9 +16,12 @@
 
 .home {
   position: absolute;
+  /* font-size: 40px; */
   top: 0;
   left: 0;
   padding-left: 10px;
+  color: white;
+  font-size: 2vw;
 }
 
 .container h1 {
