--- a/FrontEnd/src/components/BookSearchForm.css
+++ b/FrontEnd/src/components/BookSearchForm.css
@@ -1,7 +1,32 @@
 .BookSearchForm {
-  display: block;
-  font-size: 25px;
+  display: flex;
+  font-size: 4vw;
   padding: 4px 2px;
-  margin: 2px 0 20px 10px;
-  width: 40vh;
+  /* margin: 2px 0 20px 10px; */
+  align-items: center;
+}
+
+form {
+  display: flex;
+  margin-left: 25%;
+  margin-right: 25%;
+  width: 4vw;
+}
+
+label {
+  margin-right: 10px;
+}
+
+input[type="text"] {
+  /* background-image: url("https://www.pngarea.com/pngm/109/1164446_searchicon-png-search-icon-png-download.png"); */
+  background-image: url("../images/585e4ae1cb11b227491c3393.png");
+  background-size: 7%;
+  background-position: 7px 7px;
+  background-repeat: no-repeat;
+  padding-left: 55px;
+  transition: 1s ease-in-out;
+}
+
+input[type="text"]:focus {
+  border: 3px solid #555;
 }
