--- a/FrontEnd/src/components/BookSearchForm.css
+++ b/FrontEnd/src/components/BookSearchForm.css
@@ -17,7 +17,7 @@ label {
   margin-right: 10px;
 }
 
-input[type="text"] {
+.searchInput[type="text"] {
   /* background-image: url("https://www.pngarea.com/pngm/109/1164446_searchicon-png-search-icon-png-download.png"); */
   background-image: url("../images/585e4ae1cb11b227491c3393.png");
   background-size: 7%;
@@ -27,6 +27,6 @@ input[type="text"] {
   transition: 1s ease-in-out;
 }
 
-input[type="text"]:focus {
+.searchInput[type="text"]:focus {
   border: 3px solid #555;
 }
