--- a/FrontEnd/src/components/BookDescriptions.css
+++ b/FrontEnd/src/components/BookDescriptions.css
@@ -52,6 +52,47 @@
   align-items: center;
 }
 
+.amazonButton {
+  background-image: url("../images/512x512.png");
+  background-repeat: no-repeat;
+  background-color: black;
+  background-size: 17vw;
+  background-position-y: center;
+  /* width: 300px; */
+  background-position-x: center;
+  width: 18vw;
+  margin: 10em;
+  height: 70px;
+  border: 1 solid black;
+  border-radius: 8px;
+  /* background-size: 100%; To fill the dimensions of container (button), or */
+  margin-top: 20px;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: -10em;
+}
+
+.reviewButton {
+  margin-top: 10vh;
+  width: 20vw;
+  height: 10vh;
+  justify-content: center;
+  align-items: center;
+  margin-left: 9em;
+  border: grey 2px solid;
+  border-radius: 5%;
+  background-color: burlywood;
+  font-weight: bold;
+  color: black;
+}
+
+.floatContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 @media screen and (min-width: 768px) {
   .detailsPage {
     display: block;
@@ -68,6 +109,7 @@
   .bigContainer {
     display: flex;
     flex-direction: row;
+    margin-top: 14vh;
   }
   .coverDiv {
     flex: 1;
@@ -84,9 +126,9 @@
     right: 0; */
     /* width: 40vw; */
     /* flex: 1; */
-    justify-content: center;
-    align-items: center;
-    margin: 4em;
+
+    margin: 11vw;
+    margin-top: 0;
   }
 
   .floatContainer {
@@ -102,11 +144,11 @@
 
   .descriptionParagraph {
     float: right;
-    width: 50vw;
+    width: 39vw;
     max-width: fit-content;
-    margin-top: -20px;
+    margin-top: -35vh;
     flex-wrap: wrap;
-    margin-right: 2em;
+    margin-right: 5vw;
     padding-left: 2em;
   }
 
@@ -119,14 +161,16 @@
     background-image: url("../images/512x512.png");
     background-repeat: no-repeat;
     background-color: black;
+    background-size: 17vw;
+    background-position-y: center;
     /* width: 300px; */
-    width: 30vw;
-    margin: 6em;
+    background-position-x: center;
+    width: 18vw;
+    margin: 10em;
     height: 70px;
     border: 1 solid black;
     border-radius: 8px;
     /* background-size: 100%; To fill the dimensions of container (button), or */
-    background-size: 100px auto;
     margin-top: 20px;
     align-items: center;
     justify-content: center;
@@ -134,11 +178,17 @@
   }
 
   .reviewButton {
-    margin-top: 20px;
+    margin-top: 10vh;
     width: 20vw;
+    height: 10vh;
     justify-content: center;
     align-items: center;
     margin-left: 9em;
+    border: grey 2px solid;
+    border-radius: 5%;
+    background-color: burlywood;
+    font-weight: bold;
+    color: black;
   }
 
   .reviewForm {
@@ -154,4 +204,11 @@
   textarea {
     margin-top: 10em;
   }
+}
+
+.reviewsOnPage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
